--- a/build.gradle
+++ b/build.gradle
@@ -66,12 +66,16 @@ shadowJar {
         exclude(dependency('org.apache.httpcomponents:httpclient:4.5.14'))
         exclude(dependency('org.apache.httpcomponents:httpcore:4.4.16'))
         exclude(dependency('org.slf4j:slf4j-api:2.0.17'))
+        exclude(dependency('com.github.KodTik-Innovations:httpclient:4.5.14'))
+        exclude(dependency('com.github.KodTik-Innovations.httpclient:httpcore:4.5.14'))
     }
 }
 
 dependencies {    
     implementation("org.apache.maven.resolver:maven-resolver-transport-apache:2.0.11")
     implementation("javax.inject:javax.inject:1")
+    implementation("com.github.KodTik-Innovations:httpclient:4.5.14")
+    implementation("com.github.KodTik-Innovations.httpclient:httpcore:4.5.14")
 }
 
 publishing {
